kubernetes-argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # Specify that you want to use the ALB
    kubernetes.io/ingress.class: alb

    # Make the ALB public-facing (Internet accessible)
    alb.ingress.kubernetes.io/scheme: internet-facing

    # Optional: Enable SSL, etc.
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: my-frontend-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
